:zap: improving performance of Security